feat(explanations): Phase 15 NL/LLM hardening for deterministic Ask outcomes
- Add citation family-prefix validation with :* wildcard matching (plus exact-match compatibility) to reduce brittle citation failures
- Enforce deterministic required-citation construction in FactPack builders (dedupe + stable sort)
- Add derived-analytics refusal triggers in intent parsing and return CAPABILITY_UNSUPPORTED for Phase-16-only analytics requests
- Harden regional LAWA regional_* flows with deterministic top/bottom-K region subset selection and subset-only evidence passing
- Require citations for all evidence families used in regional subset outputs
- Add LLM prompt constraint: do not mention regions/values not present in provided evidence
- Add generated pattern-panel harness and evaluator:
  - docs/phase15/pattern_panel_runner.py
  - docs/phase15/pattern_panel_evaluate.py
  - docs/phase15/README_pattern_panel.md
  - docs/phase15/run_pattern_panel.sh
- Update Phase 15 docs/progress to use rubric + pattern-panel authority instead of static “10 answered / 4 refusals” benchmarking
- Add Phase 16 TODO to make regional subset K configurable

Phase 15 completion hardening: safety + determinism + boundary enforcement
Delivers the Ask hardening package for grounded descriptive analytics, robust refusals at Phase 16 boundaries, and reproducible Gate A/B/C validation across repeated runs