@@ -19,6 +19,7 @@ public class LawaTrendMultiYearFactPackBuilder implements FactPackBuilder {
     // Centralized improving trend classifications for LAWA water quality
     private static final Set<String> IMPROVING_TRENDS = Set.of("IMPROVING");
     private static final Set<String> DEGRADING_TRENDS = Set.of("DEGRADING");
+    private static final int REGIONAL_SAMPLE_K = 2;
 
     public LawaTrendMultiYearFactPackBuilder(LawaTrendMultiYearRecordRepository repository) {
         this.repository = repository;
@@ -396,10 +397,18 @@ public class LawaTrendMultiYearFactPackBuilder implements FactPackBuilder {
                 Collectors.mapping(LawaTrendMultiYearRecord::getLawaSiteId, Collectors.counting())
             ));
 
+        Set<String> selectedRegions = selectDeterministicRegionalSample(
+            totalSitesByRegion,
+            improvingSitesByRegion
+        );
+
         totalSitesByRegion.entrySet().stream()
             .sorted(Map.Entry.comparingByKey())
             .forEach(regionEntry -> {
                 String region = regionEntry.getKey();
+                if (!selectedRegions.contains(region)) {
+                    return;
+                }
                 Long totalSites = totalSitesByRegion.get(region);
                 Long improvingSites = improvingSitesByRegion.getOrDefault(region, 0L);
                 
@@ -420,6 +429,13 @@ public class LawaTrendMultiYearFactPackBuilder implements FactPackBuilder {
                     factPack.getFacts().getMetrics().add(metric);
                 }
             });
+
+        // Keep only classifications for selected regions so regional claims stay within visible facts.
+        factPack.getFacts().setClassifications(
+            factPack.getFacts().getClassifications().stream()
+                .filter(c -> selectedRegions.contains((String) c.getDimensions().get("region")))
+                .toList()
+        );
     }
 
     private void buildBasicFacts(FactPack factPack, List<LawaTrendMultiYearRecord> records) {
@@ -460,7 +476,6 @@ public class LawaTrendMultiYearFactPackBuilder implements FactPackBuilder {
         switch (questionType) {
             case "water_quality_trends":
             case "improving_sites_trend":
-            case "regional_trend_comparison":
                 // If there are no facts, keep allowed claims empty to trigger refusal as per tests
                 boolean hasAnyFacts = !(factPack.getFacts().getClassifications().isEmpty()
                         && factPack.getFacts().getMetrics().isEmpty()
@@ -472,15 +487,31 @@ public class LawaTrendMultiYearFactPackBuilder implements FactPackBuilder {
                 }
                 factPack.getGuardrails().setForbiddenClaims(Arrays.asList("forecast", "causation", "policy_recommendation", "site_specific_advice"));
                 if (!factPack.getFacts().getClassifications().isEmpty()) {
-                    factPack.getGuardrails().setRequiredCitations(
-                        factPack.getFacts().getClassifications().stream()
-                            .limit(3) // Limit to first 3 for reasonable citation list
-                            .map(ClassificationFact::getId)
-                            .collect(Collectors.toList())
-                    );
+                    factPack.getGuardrails().setRequiredCitations(stableRequiredCitations(
+                        factPack.getFacts().getClassifications().stream().map(ClassificationFact::getId).toList(),
+                        3
+                    ));
                 } else if (!factPack.getFacts().getTimeSeries().isEmpty()) {
-                    factPack.getGuardrails().setRequiredCitations(Collections.singletonList(factPack.getFacts().getTimeSeries().getFirst().getId()));
+                    factPack.getGuardrails().setRequiredCitations(stableRequiredCitations(
+                        factPack.getFacts().getTimeSeries().stream().map(TimeSeriesFact::getId).toList(),
+                        1
+                    ));
                 }
+                break;
+            case "regional_trend_comparison":
+                boolean hasRegionalFacts = !(factPack.getFacts().getClassifications().isEmpty()
+                        && factPack.getFacts().getMetrics().isEmpty()
+                        && factPack.getFacts().getTimeSeries().isEmpty());
+                if (hasRegionalFacts) {
+                    factPack.getGuardrails().setAllowedClaims(Arrays.asList("trend_distribution", "improvement_rate", "regional_comparison", "trend_summary"));
+                    factPack.getGuardrails().setRequiredCitations(
+                        buildRegionalTrendRequiredCitations(factPack)
+                    );
+                } else {
+                    factPack.getGuardrails().setAllowedClaims(new ArrayList<>());
+                    factPack.getGuardrails().setRequiredCitations(new ArrayList<>());
+                }
+                factPack.getGuardrails().setForbiddenClaims(Arrays.asList("forecast", "causation", "policy_recommendation", "site_specific_advice"));
                 break;
             default:
                 // For unsupported question types, set empty guardrails to trigger refusal
@@ -489,6 +520,64 @@ public class LawaTrendMultiYearFactPackBuilder implements FactPackBuilder {
                 factPack.getGuardrails().setRequiredCitations(new ArrayList<>());
                 break;
         }
+    }
+
+    private List<String> stableRequiredCitations(List<String> ids, int limit) {
+        if (ids == null || ids.isEmpty()) {
+            return new ArrayList<>();
+        }
+        return ids.stream()
+            .filter(id -> id != null && !id.isBlank())
+            .distinct()
+            .sorted()
+            .limit(limit)
+            .collect(Collectors.toCollection(ArrayList::new));
+    }
+
+    private Set<String> selectDeterministicRegionalSample(
+        Map<String, Long> totalSitesByRegion,
+        Map<String, Long> improvingSitesByRegion
+    ) {
+        List<Map.Entry<String, BigDecimal>> ranked = totalSitesByRegion.entrySet().stream()
+            .filter(e -> e.getValue() != null && e.getValue() > 0)
+            .map(e -> {
+                String region = e.getKey();
+                long total = e.getValue();
+                long improving = improvingSitesByRegion.getOrDefault(region, 0L);
+                BigDecimal percent = new BigDecimal(improving)
+                    .multiply(new BigDecimal("100"))
+                    .divide(new BigDecimal(total), 2, RoundingMode.HALF_UP);
+                return Map.entry(region, percent);
+            })
+            .toList();
+
+        Comparator<Map.Entry<String, BigDecimal>> highToLow = Comparator
+            .comparing(Map.Entry<String, BigDecimal>::getValue, Comparator.reverseOrder())
+            .thenComparing(Map.Entry::getKey);
+        Comparator<Map.Entry<String, BigDecimal>> lowToHigh = Comparator
+            .comparing(Map.Entry<String, BigDecimal>::getValue)
+            .thenComparing(Map.Entry::getKey);
+
+        LinkedHashSet<String> selected = new LinkedHashSet<>();
+        ranked.stream().sorted(highToLow).limit(REGIONAL_SAMPLE_K).forEach(e -> selected.add(e.getKey()));
+        ranked.stream().sorted(lowToHigh).limit(REGIONAL_SAMPLE_K).forEach(e -> selected.add(e.getKey()));
+        return selected;
+    }
+
+    private List<String> buildRegionalTrendRequiredCitations(FactPack factPack) {
+        List<String> classFamilies = factPack.getFacts().getClassifications().stream()
+            .map(ClassificationFact::getId)
+            .map(id -> id.replaceFirst(":[^:]+$", ":*"))
+            .toList();
+        List<String> metricFamilies = factPack.getFacts().getMetrics().stream()
+            .map(MetricFact::getId)
+            .filter(id -> id.startsWith("metric:lawa:improving_sites_percentage:"))
+            .map(id -> "metric:lawa:improving_sites_percentage:*")
+            .toList();
+        List<String> families = new ArrayList<>();
+        families.addAll(classFamilies);
+        families.addAll(metricFamilies);
+        return stableRequiredCitations(families, Integer.MAX_VALUE);
     }
 
     private String getPeriodCoverage(List<LawaTrendMultiYearRecord> records) {
