@@ -154,7 +154,10 @@ public class MbieGenerationAnnualFactPackBuilder implements FactPackBuilder {
                 buildHydroGenerationTrendFacts(factPack, records);
                 break;
             case "fuel_type_comparison":
-                buildFuelTypeComparisonFacts(factPack, records);
+                buildFuelTypeComparisonFacts(factPack, request, records);
+                break;
+            case "generation_mix_overview":
+                buildGenerationMixOverviewFacts(factPack, request, records);
                 break;
             default:
                 // Build basic facts for unsupported question types (will result in refusal)
@@ -262,41 +265,113 @@ public class MbieGenerationAnnualFactPackBuilder implements FactPackBuilder {
         }
     }
 
-    private void buildFuelTypeComparisonFacts(FactPack factPack, List<MbieGenerationAnnualRecord> records) {
-        // Get the most recent year's data
+    private void buildFuelTypeComparisonFacts(FactPack factPack, ExplanationRequest request, List<MbieGenerationAnnualRecord> records) {
+        List<String> fuels = extractFuelTypeFilters(request);
+        if (fuels.size() >= 2) {
+            buildFuelTypeTimeSeriesFacts(factPack, records, fuels);
+            buildFuelTypeLatestMetrics(factPack, records, fuels);
+            return;
+        }
+        buildFuelTypeLatestMetrics(factPack, records, null);
+    }
+
+    private void buildGenerationMixOverviewFacts(FactPack factPack, ExplanationRequest request, List<MbieGenerationAnnualRecord> records) {
+        // Mix overview is a metric snapshot of the latest period in scope
+        buildFuelTypeLatestMetrics(factPack, records, null);
+    }
+
+    private void buildFuelTypeTimeSeriesFacts(FactPack factPack, List<MbieGenerationAnnualRecord> records, List<String> fuels) {
+        for (String fuel : fuels) {
+            Map<Integer, BigDecimal> yearlyTotals = records.stream()
+                .filter(record -> fuel.equalsIgnoreCase(record.getFuelTypeNorm()))
+                .collect(Collectors.groupingBy(
+                    MbieGenerationAnnualRecord::getPeriodYear,
+                    Collectors.mapping(MbieGenerationAnnualRecord::getGenerationGwh,
+                        Collectors.reducing(BigDecimal.ZERO, BigDecimal::add))
+                ));
+
+            if (yearlyTotals.isEmpty()) {
+                continue;
+            }
+
+            IntSummaryStatistics stats = yearlyTotals.keySet().stream().mapToInt(Integer::intValue).summaryStatistics();
+            String coverage = stats.getCount() > 0 ? stats.getMin() + "_" + stats.getMax() : "all_time";
+
+            TimeSeriesFact timeSeries = new TimeSeriesFact(
+                "ts:mbie:generation_gwh:" + fuel + ":" + coverage,
+                "generation_gwh",
+                "GWh",
+                Map.of("scope", "NZ", "fuel_type", fuel)
+            );
+
+            List<TimeSeriesFact.DataPoint> points = yearlyTotals.entrySet().stream()
+                .sorted(Map.Entry.comparingByKey())
+                .map(entry -> new TimeSeriesFact.DataPoint(entry.getKey().toString(), entry.getValue()))
+                .collect(Collectors.toList());
+
+            timeSeries.setPoints(points);
+            factPack.getFacts().getTimeSeries().add(timeSeries);
+        }
+    }
+
+    private void buildFuelTypeLatestMetrics(
+        FactPack factPack,
+        List<MbieGenerationAnnualRecord> records,
+        List<String> fuels
+    ) {
         OptionalInt latestYear = records.stream()
             .mapToInt(MbieGenerationAnnualRecord::getPeriodYear)
             .max();
 
-        if (latestYear.isPresent()) {
-            int year = latestYear.getAsInt();
-            
-            Map<String, BigDecimal> fuelTypeTotals = records.stream()
-                .filter(record -> record.getPeriodYear() == year)
-                .collect(Collectors.groupingBy(
-                    MbieGenerationAnnualRecord::getFuelTypeNorm,
-                    Collectors.mapping(MbieGenerationAnnualRecord::getGenerationGwh, 
-                        Collectors.reducing(BigDecimal.ZERO, BigDecimal::add))
-                ));
-
-            // Create metric facts for each fuel type with deterministic ordering
-            fuelTypeTotals.entrySet().stream()
-                .sorted(Map.Entry.comparingByKey()) // deterministic ordering
-                .forEach(entry -> {
-                    String fuelType = entry.getKey();
-                    BigDecimal total = entry.getValue();
-                    
-                    MetricFact metric = new MetricFact(
-                        "metric:mbie:generation_gwh:" + year + ":" + fuelType,
-                        "generation_gwh",
-                        total,
-                        "GWh",
-                        String.valueOf(year),
-                        Map.of("fuel_type", fuelType)
-                    );
-                    factPack.getFacts().getMetrics().add(metric);
-                });
+        if (latestYear.isEmpty()) {
+            return;
         }
+
+        int year = latestYear.getAsInt();
+        Map<String, BigDecimal> fuelTypeTotals = records.stream()
+            .filter(record -> record.getPeriodYear() == year)
+            .filter(record -> fuels == null || fuels.isEmpty() || fuels.stream().anyMatch(f -> f.equalsIgnoreCase(record.getFuelTypeNorm())))
+            .collect(Collectors.groupingBy(
+                MbieGenerationAnnualRecord::getFuelTypeNorm,
+                Collectors.mapping(MbieGenerationAnnualRecord::getGenerationGwh,
+                    Collectors.reducing(BigDecimal.ZERO, BigDecimal::add))
+            ));
+
+        fuelTypeTotals.entrySet().stream()
+            .sorted(Map.Entry.comparingByKey())
+            .forEach(entry -> {
+                String fuelType = entry.getKey();
+                BigDecimal total = entry.getValue();
+
+                MetricFact metric = new MetricFact(
+                    "metric:mbie:generation_gwh:" + year + ":" + fuelType,
+                    "generation_gwh",
+                    total,
+                    "GWh",
+                    String.valueOf(year),
+                    Map.of("fuel_type", fuelType)
+                );
+                factPack.getFacts().getMetrics().add(metric);
+            });
+    }
+
+    private List<String> extractFuelTypeFilters(ExplanationRequest request) {
+        if (request == null || request.getFilters() == null) {
+            return List.of();
+        }
+        Object fuelA = request.getFilters().get("fuelType");
+        Object fuelB = request.getFilters().get("fuelTypeB");
+        List<String> fuels = new ArrayList<>();
+        if (fuelA instanceof String s && !s.isBlank()) {
+            fuels.add(s.trim().toUpperCase());
+        }
+        if (fuelB instanceof String s && !s.isBlank()) {
+            String norm = s.trim().toUpperCase();
+            if (!fuels.contains(norm)) {
+                fuels.add(norm);
+            }
+        }
+        return fuels;
     }
 
     private void buildBasicFacts(FactPack factPack, List<MbieGenerationAnnualRecord> records) {
@@ -328,18 +403,26 @@ public class MbieGenerationAnnualFactPackBuilder implements FactPackBuilder {
                 factPack.getGuardrails().setAllowedClaims(Arrays.asList("trend_increase", "trend_decrease", "trend_summary"));
                 factPack.getGuardrails().setForbiddenClaims(Arrays.asList("forecast", "causation", "policy_recommendation"));
                 if (!factPack.getFacts().getTimeSeries().isEmpty()) {
-                    factPack.getGuardrails().setRequiredCitations(Collections.singletonList(factPack.getFacts().getTimeSeries().getFirst().getId()));
+                    factPack.getGuardrails().setRequiredCitations(stableRequiredCitations(
+                        factPack.getFacts().getTimeSeries().stream().map(TimeSeriesFact::getId).toList(),
+                        1
+                    ));
                 }
                 break;
             case "fuel_type_comparison":
+            case "generation_mix_overview":
                 factPack.getGuardrails().setAllowedClaims(Arrays.asList("comparison", "largest_contributor", "relative_proportion"));
                 factPack.getGuardrails().setForbiddenClaims(Arrays.asList("forecast", "causation", "policy_recommendation"));
-                if (!factPack.getFacts().getMetrics().isEmpty()) {
-                    factPack.getGuardrails().setRequiredCitations(
-                        factPack.getFacts().getMetrics().stream()
-                            .map(MetricFact::getId)
-                            .collect(Collectors.toList())
-                    );
+                if (!factPack.getFacts().getTimeSeries().isEmpty()) {
+                    factPack.getGuardrails().setRequiredCitations(stableRequiredCitations(
+                        factPack.getFacts().getTimeSeries().stream().map(TimeSeriesFact::getId).toList(),
+                        Integer.MAX_VALUE
+                    ));
+                } else if (!factPack.getFacts().getMetrics().isEmpty()) {
+                    factPack.getGuardrails().setRequiredCitations(stableRequiredCitations(
+                        factPack.getFacts().getMetrics().stream().map(MetricFact::getId).toList(),
+                        Integer.MAX_VALUE
+                    ));
                 }
                 break;
             default:
@@ -349,6 +432,18 @@ public class MbieGenerationAnnualFactPackBuilder implements FactPackBuilder {
                 factPack.getGuardrails().setRequiredCitations(new ArrayList<>());
                 break;
         }
+    }
+
+    private List<String> stableRequiredCitations(List<String> ids, int limit) {
+        if (ids == null || ids.isEmpty()) {
+            return new ArrayList<>();
+        }
+        return ids.stream()
+            .filter(id -> id != null && !id.isBlank())
+            .distinct()
+            .sorted()
+            .limit(limit)
+            .collect(Collectors.toCollection(ArrayList::new));
     }
 
     private String getPeriodCoverage(List<MbieGenerationAnnualRecord> records) {
